--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 html, body{
     font-family: "Open Sans", sans-serif;
 }
+
+h1{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+h2{
+    margin-top: 25px;
+}
+
+.center{
+    text-align: center;
+}
