--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 html, body{
     font-family: "Roboto", sans-serif;
+	display:flex;
+	margin:0;
+	width:100%;
+	height:100%;
 }
 
 h1{
@@ -9,6 +13,26 @@ h1{
 
 h2{
     margin-top: 25px;
+}
+
+#sidebar{
+	overflow-y:scroll;
+}
+
+#mainContent{
+	flex-grow:1;
+	display:flex;
+	flex-direction:column;
+}
+
+#infoContainer{
+	background:#dedede;
+	flex-basis:15%;
+	display:flex;
+}
+
+#mapContainer{
+	flex-grow:1;
 }
 
 .center{
@@ -21,4 +45,15 @@ h2{
 
 .icon{
     font-size: 24px;
+}
+
+.unit{
+	color:#bcbcbc;
+}
+
+.kard{
+	flex-grow:1;
+	display:flex;
+	align-items:center;
+	justify-content:center;
 }
