--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@ html, body{
 	height:100%;
 }
 
+@media (max-width: 600px) {
+html, body{
+    font-family: "Robot", sans-serif;
+	display:flex;
+	flex-direction:column;
+	margin:0;
+	width:100%;
+	height:100%;
+}
+}
+
 h1{
     margin-top: 50px;
     margin-bottom: 50px;
