--- a/style.css
+++ b/style.css
@@ -27,7 +27,24 @@ h2{
 }
 
 #sidebar{
-	overflow-y:scroll;
+	/*background:#202427;*/
+	display:flex;
+	flex-direction: column;
+	box-shadow: 0 0 20px rgba(0,0,0,0.3);
+	z-index:20;
+}
+
+#sidebarButton{
+	position:absolute;
+	z-index:19;
+	background:white;
+	top:1%;
+	display:inline-flex;
+	justify-content:center;
+	align-items:center;
+	box-shadow:0px 1px 4px rgba(0,0,0,0.3);
+	font-size:22px;
+	padding:1% 0%;
 }
 
 #mainContent{
@@ -36,11 +53,26 @@ h2{
 	flex-direction:column;
 }
 
+#logo{
+	flex-basis:10%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	font-size:175%;
+	background:#efefef;
+}
+
+#twitterContainer{
+	flex-basis:45%;
+	overflow-y:scroll;
+}
+
 #infoContainer{
 	background:#dedede;
-	flex-basis:15%;
+	flex-grow:1;
 	display:flex;
-	font-size:250%;
+	flex-direction:column;
+	font-size:225%;
 }
 
 #mapContainer{
@@ -68,5 +100,13 @@ h2{
 	display:flex;
 	align-items:center;
 	justify-content:center;
-	border-left: 1px solid rgba(0,0,0,.12);
+	background:#efefef;
+}
+
+.kard p{
+	margin:0;
+	padding:5% 0%;
+	width:90%;
+	text-align:center;
+	border-bottom: 1px solid rgba(0,0,0,.12);
 }
