--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h2{
 	justify-content:center;
 	align-items:center;
 	font-size:175%;
-	background:#efefef;
+	background:#ffffff;
 }
 
 #twitterContainer{
@@ -68,7 +68,7 @@ h2{
 }
 
 #infoContainer{
-	background:#dedede;
+	background:#ffffff;
 	flex-grow:1;
 	display:flex;
 	flex-direction:column;
@@ -100,7 +100,7 @@ h2{
 	display:flex;
 	align-items:center;
 	justify-content:center;
-	background:#efefef;
+	background:#ffffff;
 }
 
 .kard p{
