--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ html, body{
 	height:100%;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
 html, body{
-    font-family: "Robot", sans-serif;
+    font-family: "Comic Sans MS", sans-serif;
 	display:flex;
 	flex-direction:column;
 	margin:0;
@@ -45,6 +45,13 @@ h2{
 	box-shadow:0px 1px 4px rgba(0,0,0,0.3);
 	font-size:22px;
 	padding:1% 0%;
+	cursor:pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #mainContent{
