--- a/style.css
+++ b/style.css
@@ -7,23 +7,14 @@ html, body{
 }
 
 @media (max-width: 700px) {
-html, body{
-    font-family: "Comic Sans MS", sans-serif;
-	display:flex;
-	flex-direction:column;
-	margin:0;
-	width:100%;
-	height:100%;
-}
-}
-
-h1{
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-h2{
-    margin-top: 25px;
+    html, body{
+        font-family: "Roboto", sans-serif;
+    	display:flex;
+    	flex-direction:column;
+    	margin:0;
+    	width:100%;
+    	height:100%;
+    }
 }
 
 #sidebar{
@@ -84,18 +75,6 @@ h2{
 
 #mapContainer{
 	flex-grow:1;
-}
-
-.center{
-    text-align: center;
-}
-
-.blue{
-    color: blue;
-}
-
-.icon{
-    font-size: 24px;
 }
 
 .unit{
