--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body{
 @media (max-width: 700px) {
     html, body{
         font-family: "Roboto", sans-serif;
+		font-size: .863em;
     	display:flex;
     	flex-direction:column;
     	margin:0;
@@ -23,6 +24,7 @@ html, body{
 	flex-direction: column;
 	box-shadow: 0 0 20px rgba(0,0,0,0.3);
 	z-index:20;
+	min-width: 20%;
 }
 
 #sidebarButton{
