--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ html, body{
 	height:100%;
 }
 
+a .fa-twitter{
+	margin-left: 5px;
+	color: #1da1f2;
+}
+
 @media (max-width: 700px) {
     html, body{
         font-family: "Roboto", sans-serif;
@@ -16,6 +21,14 @@ html, body{
     	width:100%;
     	height:100%;
     }
+
+	#sidebar{
+		height: 40%;
+	}
+
+	#sidebar #twitterContainer{
+		display: none;
+	}
 }
 
 #sidebar{
