Fixed jittery slide bug; Removed twitter borders (looks bad); Twitter component takes up less space if not needed;

--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ a .fa-twitter{
 	/*background:#202427;*/
 	display:flex;
 	flex-direction: column;
+	position:fixed;
+	height:100%;
 	box-shadow: 0 0 20px rgba(0,0,0,0.3);
 	z-index:20;
 	min-width: 20%;
@@ -65,15 +67,17 @@ a .fa-twitter{
 #sidebarButton{
 	position:absolute;
 	z-index:19;
-	background:white;
+	background:#696969;
+	color:white;
 	top:1%;
 	display:inline-flex;
 	justify-content:center;
 	align-items:center;
 	box-shadow:0px 1px 4px rgba(0,0,0,0.3);
 	font-size:22px;
-	padding:1% 0%;
+	padding:4% 0%;
 	cursor:pointer;
+	right:-24px;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -101,11 +105,8 @@ a .fa-twitter{
 }
 
 #twitterContainer{
-	flex-basis:45%;
-	overflow-y: hidden;
+	overflow-y: scroll;
 	background-color: black;
-	border-top: 1px solid #50b2f4;
-	border-bottom: 1px solid #50b2f4;
 }
 ::-webkit-scrollbar {
 	background-color: #424242;
@@ -142,7 +143,7 @@ a .fa-twitter{
 .kard p{
 	margin:0;
 	padding:5% 0%;
-	width:90%;
+	width:95%;
 	text-align:center;
 	border-bottom: 1px solid rgba(255,255,255,.2);
 }
