--- a/style.css
+++ b/style.css
@@ -7,15 +7,41 @@ html, body{
 	height:100%;
 }
 
+#header h1{
+	letter-spacing: 5px;
+	text-transform: uppercase;
+}
+
+a{
+	cursor: pointer;
+	text-decoration: none;
+}
+a:hover{
+	color: #1fe2e2;
+}
+a.selected{
+	color: #50b2f4;
+}
+
+#nav a{
+	padding: 2px 5px;
+}
+
 #mainContent{
+	background-color: black;
+	color: white;
 	flex-grow:1;
 	display:flex;
 	flex-direction:column;
+	text-align: center;
+}
+
+#imageContainer, #videoContainer, #dataContainer, #mapContainer{
+	display: none;
 }
 
 #mapContainer{
 	flex-grow:1;
-	/*display: none;*/
 }
 
 ::-webkit-scrollbar {
@@ -23,4 +49,13 @@ html, body{
 }
 ::-webkit-scrollbar-thumb {
     background: #50b2f4;
+}
+
+.noselect {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none; 
+	user-select: none; 
 }
