--- a/style.css
+++ b/style.css
@@ -36,8 +36,45 @@ a.selected{
 	text-align: center;
 }
 
+.tableContainer{
+	background:white;
+	width:65vw;
+	font-weight:300;
+	display:flex;
+	flex-flow: row nowrap;
+}
+
+.tableHeader{
+	background:rgba(0,0,0,.75);
+}
+
+.tableContent{
+	background:rgba(0,0,0,0)
+}
+
+.tableContent:nth-child(odd){
+	background:rgba(0,0,0,0.1)
+}
+
+.tableCol{
+	flex-grow:1;
+	background:#6E7378;
+	display:flex;
+	flex-flow:column;
+}
+
+.tableCol:nth-child(even) {
+    background: #B0B2B3;
+}
+
 #imageContainer, #videoContainer, #dataContainer, #mapContainer{
 	display: none;
+	flex-grow:1;
+}
+#dataContainer{
+	flex-direction:column;
+	align-items:center;
+	padding:1%;
 }
 
 #mapContainer{
