Loaded images onto site

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a.selected{
 	flex-flow: row nowrap;
 	justify-content:center;
 	align-self:center;
-	overflow-y:scroll;
+	overflow-y:auto;
 }
 
 .tableHeader{
