--- a/style.css
+++ b/style.css
@@ -80,10 +80,13 @@ a.selected{
     object-fit: fill;
     object-position: center;
     max-height: 300px;
-    max-width: 300px;
-    height: 300px;
-    width: 300px;
+    max-width: 400px;
     margin: 0.5% .5%;
+}
+
+.fullscreen{
+    width: 80%;
+    height: 60%;
 }
 
 #imageContainer, #videoContainer, #dataContainer, #mapContainer, #homeContainer{
